--- a/Strokes/Base.lproj/Main.storyboard
+++ b/Strokes/Base.lproj/Main.storyboard
@@ -1,53 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JLw-Av-oP2">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dGy-nl-Hmd">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Canvas Controller-->
+        <!--Flashcards-->
+        <scene sceneID="x45-4I-czo">
+            <objects>
+                <viewController id="5x4-gC-Y5t" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yMz-f8-HQS">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="BXL-0F-SyV"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Flashcards" image="square.on.square" catalog="system" id="ufE-tK-1jg"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wyE-9Y-GNP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2100" y="26"/>
+        </scene>
+        <!--Canvas-->
         <scene sceneID="cHT-Ac-qGh">
             <objects>
                 <viewController id="JLw-Av-oP2" customClass="CanvasController" customModule="Strokes" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KdU-nJ-bHQ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search for a character" translatesAutoresizingMaskIntoConstraints="NO" id="bh0-4r-M4W">
-                                <rect key="frame" x="0.0" y="0.0" width="334" height="56"/>
-                                <textInputTraits key="textInputTraits" returnKeyType="search"/>
-                                <scopeButtonTitles>
-                                    <string>Title</string>
-                                    <string>Title</string>
-                                </scopeButtonTitles>
-                                <connections>
-                                    <outlet property="delegate" destination="JLw-Av-oP2" id="Wid-eH-Kva"/>
-                                </connections>
-                            </searchBar>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oA3-en-7OY">
-                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
-                                <items>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="MuF-sJ-hzt"/>
-                                    <barButtonItem title="Outline" id="0ml-bV-lDs">
-                                        <connections>
-                                            <action selector="toggleOutline:" destination="JLw-Av-oP2" id="ZKm-O8-Spx"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="wv6-qg-LY3"/>
-                                    <barButtonItem title="Reset" id="r7f-If-i8H">
-                                        <connections>
-                                            <action selector="resetQuiz:" destination="JLw-Av-oP2" id="9gl-NP-6c0"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="dyF-K8-XzW"/>
-                                </items>
-                            </toolbar>
                             <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Kc-IX-9Eq">
-                                <rect key="frame" x="37.5" y="183.5" width="300" height="300"/>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="57" y="278.5" width="300" height="300"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="05a-Si-krY"/>
                                     <constraint firstAttribute="height" constant="300" id="QnE-IV-SY2"/>
@@ -57,28 +43,25 @@
                                     <wkPreferences key="preferences"/>
                                 </wkWebViewConfiguration>
                             </wkWebView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RYo-dk-eyX">
-                                <rect key="frame" x="334" y="17" width="25" height="24"/>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search for a character" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bh0-4r-M4W">
+                                <rect key="frame" x="0.0" y="44" width="414" height="56"/>
+                                <textInputTraits key="textInputTraits" keyboardAppearance="light" returnKeyType="search"/>
                                 <connections>
-                                    <action selector="infoButtonPressed:" destination="JLw-Av-oP2" eventType="touchUpInside" id="ytM-Ov-TPB"/>
+                                    <outlet property="delegate" destination="JLw-Av-oP2" id="Wid-eH-Kva"/>
                                 </connections>
-                            </button>
+                            </searchBar>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="8Kc-IX-9Eq" firstAttribute="centerY" secondItem="EzX-QS-MrA" secondAttribute="centerY" id="5Y4-LV-uLm"/>
-                            <constraint firstItem="oA3-en-7OY" firstAttribute="trailing" secondItem="EzX-QS-MrA" secondAttribute="trailing" id="6Fn-CE-qxD"/>
-                            <constraint firstItem="RYo-dk-eyX" firstAttribute="leading" secondItem="bh0-4r-M4W" secondAttribute="trailing" id="78V-bz-BRw"/>
-                            <constraint firstItem="RYo-dk-eyX" firstAttribute="top" secondItem="EzX-QS-MrA" secondAttribute="top" constant="17" id="L8B-F0-Oyw"/>
-                            <constraint firstItem="oA3-en-7OY" firstAttribute="bottom" secondItem="EzX-QS-MrA" secondAttribute="bottom" id="O4f-iN-uc5"/>
-                            <constraint firstItem="oA3-en-7OY" firstAttribute="leading" secondItem="EzX-QS-MrA" secondAttribute="leading" id="jEQ-ft-ybm"/>
+                            <constraint firstItem="bh0-4r-M4W" firstAttribute="leading" secondItem="EzX-QS-MrA" secondAttribute="leading" id="U3R-5D-DB2"/>
                             <constraint firstItem="bh0-4r-M4W" firstAttribute="top" secondItem="EzX-QS-MrA" secondAttribute="top" id="jwX-jX-fRL"/>
+                            <constraint firstItem="bh0-4r-M4W" firstAttribute="centerX" secondItem="8Kc-IX-9Eq" secondAttribute="centerX" id="rmE-qV-NLa"/>
                             <constraint firstItem="8Kc-IX-9Eq" firstAttribute="centerX" secondItem="EzX-QS-MrA" secondAttribute="centerX" id="s0U-37-7Hx"/>
-                            <constraint firstItem="bh0-4r-M4W" firstAttribute="leading" secondItem="EzX-QS-MrA" secondAttribute="leading" id="t0a-7i-F70"/>
-                            <constraint firstItem="EzX-QS-MrA" firstAttribute="trailing" secondItem="RYo-dk-eyX" secondAttribute="trailing" constant="16" id="xhk-F1-8VX"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="EzX-QS-MrA"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Canvas" image="scribble" catalog="system" id="jTy-J3-MlR"/>
                     <connections>
                         <outlet property="searchBar" destination="bh0-4r-M4W" id="CW4-km-XI8"/>
                         <outlet property="webView" destination="8Kc-IX-9Eq" id="znu-qT-pph"/>
@@ -86,7 +69,47 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="USA-AI-stx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1746.4000000000001" y="-392.36453201970443"/>
+            <point key="canvasLocation" x="-1242.0289855072465" y="-453.34821428571428"/>
+        </scene>
+        <!--Settings-->
+        <scene sceneID="hN7-hH-uH1">
+            <objects>
+                <viewController id="sNa-RR-49B" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Mac-4n-KkJ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="4jV-KY-Z9k"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Settings" image="gear" catalog="system" id="wzW-i1-Nva"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rkY-Go-Mih" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1242" y="-1183"/>
+        </scene>
+        <!--Offset Tab Bar Controller-->
+        <scene sceneID="wVp-mX-Oqh">
+            <objects>
+                <tabBarController id="dGy-nl-Hmd" customClass="OffsetTabBarController" customModule="Strokes" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="28o-kV-zuV">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="sNa-RR-49B" kind="relationship" relationship="viewControllers" id="t87-4h-A0G"/>
+                        <segue destination="JLw-Av-oP2" kind="relationship" relationship="viewControllers" id="I8o-z4-oft"/>
+                        <segue destination="5x4-gC-Y5t" kind="relationship" relationship="viewControllers" id="0Ry-N6-P5Y"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VB2-Wn-BLj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2099" y="-783"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="gear" catalog="system" width="64" height="58"/>
+        <image name="scribble" catalog="system" width="64" height="54"/>
+        <image name="square.on.square" catalog="system" width="64" height="56"/>
+    </resources>
 </document>
